[gd_scene load_steps=12 format=2]

[ext_resource path="res://Gui/Viewer.gd" type="Script" id=1]
[ext_resource path="res://Font/Hack-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Hack-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/Hack-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/Hack-BoldItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Gui/ArchiveFileSelector.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.164706, 0.196078, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.133333, 0.12549, 0.14902, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[node name="Viewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="VBox/Menu"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
flat = false
items = [ "Open", null, 0, false, false, 0, 0, null, "", false, "Exit", null, 0, false, false, 1, 0, null, "", false ]

[node name="Tabs" type="TabContainer" parent="VBox"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Files" type="HSplitContainer" parent="VBox/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tree" type="Tree" parent="VBox/Tabs/Files"]
margin_right = 128.0
margin_bottom = 540.0
rect_min_size = Vector2( 128, 0 )

[node name="Text" type="RichTextLabel" parent="VBox/Tabs/Files"]
margin_left = 140.0
margin_right = 1016.0
margin_bottom = 540.0
custom_styles/normal = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Hello!
[b]Hello![/b]
[i]Hello![/i]
[b][i]Hello![/i][/b]"
text = "Hello!
Hello!
Hello!
Hello!"

[node name="3D View" type="Control" parent="VBox/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ArchiveFileSelector" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ErrDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
[connection signal="files_selected" from="ArchiveFileSelector" to="." method="_on_ArchiveFileSelector_files_selected"]
